# wish

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
client/: Cargo.toml  Trunk.toml  index.html  style.css
client/src/: api.rs  hungarian.rs  i18n.rs  lib.rs  parse.rs
client/src/components/: editor.rs  feedback.rs  markdown.rs  mod.rs  slider.rs  template_editor.rs
client/src/pages/: admin.rs  email.rs  help.rs  history.rs  home.rs  mod.rs  offline.rs  wish.rs
server/: Cargo.toml
server/src/: db.rs  email.rs  handlers.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
