[package]
name = "wish-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wish-shared = { path = "../shared" }
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", "HtmlInputElement",
    "HtmlTextAreaElement", "HtmlSelectElement",
    "Event", "InputEvent", "MouseEvent", "KeyboardEvent",
    "Headers", "Request", "RequestInit", "Response",
    "Location", "History", "Url", "UrlSearchParams",
    "WebSocket", "MessageEvent", "CloseEvent",
    "console",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
serde-wasm-bindgen = "0.6"
